--- a/style.css
+++ b/style.css
@@ -18,15 +18,15 @@ a{
     --primary-color: #41208f;
     --secondary-color: #DA186E;
     --tertiary-color: #F8D358;
-    --card: rgba(255,255,255,.3);
+    --card: rgba(255,255,255,.2);
     --shadow-card: rgba(255,255,255,.6);
     --links: #fffc;
 
     font-size: 18px;
     --font-size-base: clamp(1.25rem, 0vw + 1.25rem, 1.25rem);
-    --font-size-p: clamp(1.56rem, 0.19vw + 1.52rem, 1.67rem);
-    --font-size-h2: clamp(1.7rem, 0.49vw + 1.7rem, 2rem);
-    --font-size-h1: clamp(2.44rem, 0.94vw + 2.21rem, 2.96rem);
+    --font-size-p: clamp(1rem, 2vw, 1.111rem);
+    --font-size-h2: clamp(1.2rem, 2vw, 1.6rem);
+    --font-size-h1: clamp(1.8rem, 2vw + 1rem, 2.5rem);
 }
 body{
     position: relative;
@@ -43,8 +43,9 @@ body{
 main{
     position: absolute;
     z-index: 1;
-    width: clamp(400px, 75%, 1200px);
+    width: clamp(300px, 80%, 1200px);
     background-color: var(--card);
+    backdrop-filter: blur(1px);
     border-radius: 20px;
     padding: 40px;
     box-shadow: 0 0 8px var(--shadow-card);
@@ -94,7 +95,7 @@ p{
     justify-content: space-evenly;
     align-items: center;
     width: 130px;
-    height: 150px;
+    aspect-ratio: .87;
     border-radius: 10px;
     background-color: var(--links);
     box-shadow: 3px 3px 6px #0003;
@@ -107,6 +108,11 @@ p{
 .networks img{
     width: 80px;
     max-width: 45vw;
+}
+@media (max-width: 700px) or (max-height: 700px){
+    .networks a{width: 70px;}
+    .networks img{width: 40px;}
+    .networks p{font-size: .8em;}
 }
 .landscape{
     height: 100vh;
