--- a/style.css
+++ b/style.css
@@ -59,14 +59,22 @@ main{
     position: absolute;
     z-index: 1;
     width: clamp(300px, 80%, 1200px);
+    max-height: 95vh;
     background-color: var(--card);
     backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
     border-radius: 20px;
     padding: 40px;
     box-shadow: 0 0 8px var(--shadow-card);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow-y: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+main::-webkit-scrollbar{
+    display: none;
 }
 h1{
     font-size: var(--font-size-h1);
