--- a/style.css
+++ b/style.css
@@ -36,12 +36,16 @@ a{
     --card: rgba(255,255,255,.4);
     --shadow-card: rgba(255,255,255,.6);
     --links: #fffc;
+    --skills: #fff8;
+    --nav: #6E259280;
+    --nav-text: white;
 
     font-size: 18px;
-    --font-size-base: clamp(1.25rem, 0vw + 1.25rem, 1.25rem);
-    --font-size-p: clamp(1rem, 2vw, 1.111rem);
-    --font-size-h2: clamp(1.2rem, 2vw, 1.6rem);
-    --font-size-h1: clamp(1.8rem, 2vw + 1rem, 2.5rem);
+    --font-size-base: clamp(1.25em, 0vw + 1.25em, 1.25em);
+    --font-size-p: clamp(0.778rem, 1vw + 0.5rem, 1.111rem);
+    --font-size-h3: clamp(1rem, 1vw + 0.75rem, 1.333rem);
+    --font-size-h2: clamp(1.2em, 2vw, 1.6em);
+    --font-size-h1: clamp(1.8em, 2vw + 1em, 2.5em);
 }
 body{
     position: relative;
@@ -55,25 +59,25 @@ body{
 @media (max-width: 450px){
     :root{font-size: 14px;}
 }
-main{
+.content{
     position: absolute;
     z-index: 1;
-    width: clamp(300px, 80%, 1200px);
-    max-height: 95vh;
+    width: clamp(450px, 80%, 1200px);
+    height: 90vh;
     background-color: var(--card);
     backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(3px);
     border-radius: 20px;
     padding: 40px;
     box-shadow: 0 0 8px var(--shadow-card);
-    top: 50%;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
     overflow-y: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
-main::-webkit-scrollbar{
+.content::-webkit-scrollbar{
     display: none;
 }
 h1{
@@ -82,17 +86,13 @@ h1{
     color: var(--primary-color);
     text-shadow: 3px 3px var(--tertiary-color);
 }
-h1:before{
-    content: '\e589';
-    font-family: 'Font Awesome 6 Free';
-    color: var(--secondary-color);
-    text-shadow: 3px 3px var(--tertiary-color);
-    margin-right: 15px;
-}
 h2{
     font-size: var(--font-size-h2);
     margin-block: .7em;
     color: var(--secondary-color);
+}
+h3{
+    font-size: var(--font-size-h3);
 }
 p{
     font-size: var(--font-size-p);
