--- a/src/App.css
+++ b/src/App.css
@@ -43,10 +43,11 @@ main{
   font-size: 25px;
   min-height: calc(90vh - 80px);
   margin-bottom: 80px;
-  padding-top: 40px;
+  /* padding-top: 40px; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  scroll-snap-align: start;
 }
 #home{
   padding-top: 0;
@@ -54,7 +55,7 @@ main{
 }
 #aboutme img{
   width: min(300px, 30%);
-  border-radius: 15%;
+  border-radius: 16px;
 }
 #aboutme p{
   text-align: left;
@@ -62,6 +63,10 @@ main{
 }
 #skills, #projects, #contact{
   gap: 10px;
+}
+.empty-for-scroll{
+  width: 100%;
+  height: 400px;
 }
 .wrapper{
   position: relative;
@@ -112,8 +117,36 @@ main{
   background-color: var(--tertiary-color);
   color: var(--nav-text);
 }
+.all-days{
+  position: relative;
+}
 .days{
   justify-content: space-evenly;
+}
+.all-days button{
+  padding: 8px;
+  border-radius: 8px;
+  border: none;
+  background-color: var(--secondary-color);
+  color: var(--nav-text);
+  cursor: pointer;
+}
+.button-container{
+  z-index: 100;
+  margin-bottom: 20px;
+  width: 100%;
+  position: sticky;
+  top: 0;
+}
+.container .project-url{
+  background-color: var(--secondary-color);
+  color: var(--nav-text);
+  display: flex;
+  gap: 5px;
+}
+.project-url svg{
+  width: 30px;
+  height: 30px;
 }
 .container .day{
   flex-direction: column;
@@ -182,11 +215,14 @@ main{
 #contact .container div{
   width: 250px;
 }
-#contact a{
+a, button{
   transition: .3s ease-in-out;
 }
-#contact a:hover{
+a:hover, button:hover{
   scale: 1.05;
+}
+a:has(>img):hover{
+  scale: 1;
 }
 .resume{
   display: inline-flex;
@@ -195,9 +231,6 @@ main{
   justify-content: center;
   height: 100%;
   gap: 5px;
-}
-.resume h3{
-  align-self: center;
 }
 .contact-me input,.contact-me button, .contact-me textarea{
   width: 95%;
@@ -217,4 +250,23 @@ main{
 }
 .contact-me button:hover{
   scale: 1.05;
+}
+.findMe{
+  display: flex;
+  gap: 10px;
+  width: 100%;
+}
+@media (max-width: 500px){
+  .findMe{flex-direction: column;}
+  .findMe div{width: 100%;}
+}
+.network{
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+.network svg{
+  height: 30px;
 }
