--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ body{
     width: clamp(450px, 80%, 1200px);
     height: 90vh;
     background-color: var(--card);
-    backdrop-filter: blur(3px);
-    -webkit-backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     border-radius: 20px;
     padding: 40px;
     box-shadow: 0 0 8px var(--shadow-card);
@@ -76,6 +76,7 @@ body{
     overflow-y: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    scroll-snap-type: y mandatory;
 }
 .content::-webkit-scrollbar{
     display: none;
