--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,44 @@ main{
 #home{
   padding-top: 0;
   justify-content: center;
+  position: relative;
+}
+.home-scroll-down{
+  color: var(--primary-color);
+  position: absolute;
+  bottom: -40px;
+  width: 120px;
+  transform-origin: center bottom;
+  animation: scroll-down 3s ease-in-out infinite;
+}
+@keyframes scroll-down {
+  from,
+  20%,
+  53%,
+  to {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transform: translateY(0);
+  }
+
+  40%,
+  43% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translateY(-30px) scaleY(1.1);
+  }
+
+  70% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translateY(-15px) scaleY(1.05);
+  }
+
+  80% {
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transform: translateY(0) scaleY(0.95);
+  }
+
+  90% {
+    transform: translateY(-4px) scaleY(1.02);
+  } 
 }
 .wrapper.aboutMe{
   width: 100%;
